--- a/app/views/teams/show.turbo_stream.erb
+++ b/app/views/teams/show.turbo_stream.erb
@@ -1,7 +1,9 @@
 <%= turbo_stream.replace 'teamMembers' do %>
-  <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-    <%= render 'member_list', members: @members %>
-  </div>
+  <%= turbo_frame_tag 'teamMembers' do %>
+    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+      <%= render 'member_list', members: @members %>
+    </div>
+  <% end %>
 <% end %>
 
 <%= turbo_stream.replace 'teamRankings' do %>
