filter gender on _rankings when turbo-frame is replaced

--- a/app/views/teams/_rankings.html.erb
+++ b/app/views/teams/_rankings.html.erb
@@ -29,7 +29,7 @@
     </div>
   <% end %>
 
-  <%= turbo_frame_tag 'teamRankings' do %>
+  <%= turbo_frame_tag 'teamRankings', data: { filter_gender_target: 'turboFrame' } do %>
     <%= render 'rankings_table', team: @team, date_range: @date_range, date_range_description: @date_range_description %>
   <% end %>
 </div>
