--- a/app/views/teams/_featured.html.erb
+++ b/app/views/teams/_featured.html.erb
@@ -4,8 +4,9 @@
 </div>
 
 <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-  <% if team.recent_long_runs.any? %>
-    <% team.recent_long_runs.each do |run| %>
+  <% recent_long_runs = team.recent_long_runs %>
+  <% if recent_long_runs.present? %>
+    <% recent_long_runs.each do |run| %>
       <%= render run, team: team %>
     <% end %>
   <% else %>
