--- a/app/views/teams/_join_requests.html.erb
+++ b/app/views/teams/_join_requests.html.erb
@@ -3,7 +3,7 @@
   <p class="text-soft"><%= join_requests.count < 1 ? 'No requests' : pluralize(join_requests.count, 'request') %></p>
 </div>
 
-<% if join_requests.any? %>
+<% if join_requests.present? %>
   <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
     <% join_requests.each do |request| %>
       <%= render 'join_request', request: request %>
