--- a/app/views/teams/_membered_teams.html.erb
+++ b/app/views/teams/_membered_teams.html.erb
@@ -2,7 +2,7 @@
   <h1 class="heading">My Team Memberships</h1>
 </div>
 
-<% if membered_teams.any? %>
+<% if membered_teams.present? %>
   <%= render 'team_list', teams: membered_teams %>
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
