--- a/app/views/teams/_other_teams.html.erb
+++ b/app/views/teams/_other_teams.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <%= turbo_frame_tag 'otherTeams' do %>
-  <% if other_teams.any? %>
+  <% if other_teams.present? %>
     <%= render 'team_list', teams: other_teams, show_members: true %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
