--- a/app/views/teams/_recent_activity.html.erb
+++ b/app/views/teams/_recent_activity.html.erb
@@ -4,8 +4,9 @@
 </div>
 
 <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-  <% if team.recent_runs.any? %>
-    <% team.recent_runs.each do |run| %>
+  <% recent_runs =  team.recent_runs %>>
+  <% if recent_runs.present? %>
+    <% recent_runs.each do |run| %>
       <%= render run, team: team %>
     <% end %>
   <% else %>
