--- a/app/views/teams/index.turbo_stream.erb
+++ b/app/views/teams/index.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.replace 'otherTeams' do %>
-  <% if other_teams.any? %>
+  <% if other_teams.present? %>
     <%= render 'team_list', teams: @other_teams %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
