--- a/app/views/users/_runs_filter.html.erb
+++ b/app/views/users/_runs_filter.html.erb
@@ -28,7 +28,7 @@
     <h1 class="heading">Runs <%= @date_range.titlecase %></h1>
   </div>
   <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-    <% if @runs.any? %>
+    <% if @runs.present? %>
       <%= render @runs %>
     <% else %>
       <div class="flex flex-col gap-6 items-center justify-center py-12">
