--- a/app/views/users/_runs_today.html.erb
+++ b/app/views/users/_runs_today.html.erb
@@ -4,14 +4,15 @@
     <p class="text-soft">Runs <%= user == current_user ? 'you have' : 'this user has' %> gone on today.</p>
   </div>
 
-  <% if user == current_user && user.runs_today.any? %>
+  <% runs_today = user.runs_today %>
+  <% if user == current_user && runs_today.present? %>
     <%= link_to "New run", new_run_path, class: "btn btn-primary" %>
   <% end %>
 </div>
 
 <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-  <% if user.runs_today.any? %>
-    <% user.runs_today.each do |run| %>
+  <% if runs_today.present? %>
+    <% runs_today.each do |run| %>
       <%= render run %>
     <% end %>
   <% else %>
