--- a/app/views/users/_teams.html.erb
+++ b/app/views/users/_teams.html.erb
@@ -4,12 +4,12 @@
     <p class="text-soft">Teams <%= user == current_user ? 'you are' : 'this user is' %> the coach of.</p>
   </div>
 
-  <% if user == current_user && owned_teams.any? %>
+  <% if user == current_user && owned_teams.present? %>
     <%= link_to 'New team', new_team_path, class: 'btn btn-primary' %>
   <% end %>
 </div>
 
-<% if owned_teams.any? %>
+<% if owned_teams.present? %>
   <%= render 'teams/team_list', teams: owned_teams %>
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
@@ -27,7 +27,7 @@
   <p class="text-soft">Teams <%= user == current_user ? 'you are' : 'this user is' %> a member of.</p>
 </div>
 
-<% if membered_teams.any? %>
+<% if membered_teams.present? %>
   <%= render 'teams/team_list', teams: membered_teams %>
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
