--- a/app/views/teams/_rankings_table.html.erb
+++ b/app/views/teams/_rankings_table.html.erb
@@ -38,7 +38,7 @@
           <th scope="row" class="px-6 py-4 font-medium text-slate-800 dark:text-slate-100 whitespace-nowrap">
             <div class="flex items-center">
               <span class="row-number font-mono mr-4 -ml-1"></span>
-              <%= link_to member, data: { turbo: false }, class: 'group flex gap-2 items-center mr-auto' do %>
+              <%= link_to team_member_path(team, member), data: { turbo: false }, class: 'group flex gap-2 items-center mr-auto' do %>
                 <%= image_tag member.avatar, class: 'size-9 rounded-md drop-shadow-lg dark:drop-shadow-none' if member.avatar.attached? %>
                 <div class="flex flex-col-reverse">
                   <p class="group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300"><%= member.default_name %></p>
