--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -14,14 +14,18 @@
 
   <div class="mr-auto">
     <p class="subheading mb-0.5"><%= link_to team.name, team, data: { turbo: false }, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></p>
+
     <% if team.season_dates? %>
       <p class="text-soft text-sm mt-1">
         Season <%= team.season_start_date.after?(Date.today) ? 'starts' : 'started' %> <%= pretty_date(team.season_start_date) %>
       </p>
     <% end %>
+
     <p class="help-text">
-      Coach: <%= link_to team.owner.default_name, team.owner, data: { turbo: false }, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
+      Coach: <%= link_to team.owner.default_name, team_member_path(team, team.owner), data: { turbo: false }, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
     </p>
+
+    <%= link_to "View #{@user == current_user ? 'your' : "#{@user.default_name}'s"} member page", team_member_path(team, @user), class: 'btn-link text-xs' if @user.present? && !@user.owns?(team) && current_page?(user_path(@user)) %>
   </div>
   <%= render 'teams/team_buttons', team: team %>
 </div>
@@ -29,6 +33,6 @@
 <% if show_members && team.any_members_in_common?(current_user) && !current_user.member_of?(team) %>
   <p class="help-text mt-1">
     <span>Members you know:</span>
-    <%= list(items: team.members_in_common(current_user).map { |user| link_to(user.default_name, user, data: { turbo: false }, class: 'btn-link') }).html_safe %>
+    <%= list(items: team.members_in_common(current_user).map { |user| link_to(user.default_name, team_member_path(team, user), data: { turbo: false }, class: 'btn-link') }).html_safe %>
   </p>
 <% end %>
