--- a/app/views/teams/forms/_edit_team.html.erb
+++ b/app/views/teams/forms/_edit_team.html.erb
@@ -3,4 +3,4 @@
   <p class="text-soft">Edit your team's details.</p>
 </div>
 
-<%= render "form", team: @team %>
+<%= render 'teams/forms/form', team: @team %>
