--- a/app/views/teams/index/_membered_teams.html.erb
+++ b/app/views/teams/index/_membered_teams.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <% if membered_teams.present? %>
-  <%= render 'team_list', teams: membered_teams %>
+  <%= render 'teams/shared/team_list', teams: membered_teams %>
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
     <p class="prose dark:prose-invert text-soft">You're not a member of any teams yet.</p>
