--- a/app/views/teams/index/_other_teams.html.erb
+++ b/app/views/teams/index/_other_teams.html.erb
@@ -16,7 +16,7 @@
 
 <%= turbo_frame_tag 'otherTeams' do %>
   <% if other_teams.present? %>
-    <%= render 'team_list', teams: other_teams, show_members: true %>
+    <%= render 'teams/shared/team_list', teams: other_teams, show_members: true %>
   <% else %>
     <div class="flex flex-col gap-6 items-center justify-center py-12">
       <p class="prose dark:prose-invert text-soft">No teams found.</p>
