--- a/app/views/teams/index/_owned_teams.html.erb
+++ b/app/views/teams/index/_owned_teams.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <% if owned_teams.present? %>
-  <%= render 'team_list', teams: owned_teams %>
+  <%= render 'teams/shared/team_list', teams: owned_teams %>
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
     <p class="prose dark:prose-invert text-soft">You don't have any teams yet.</p>
