--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -5,7 +5,7 @@
 
     <h1 class="heading"><%= @member.default_name %></h1>
     <h2 class="text-lg my-1 text-soft">
-      <%= @member.owns?(@team) ? "Coach" : "Member" %> of <%= link_to @team.name, @team, class: 'btn-link' %>
+      <%= @member.owns?(@team) ? 'Coach' : 'Member' %> of <%= link_to @team.name, @team, class: 'btn-link' %>
       <%= "for #{time_ago_in_words(@team_membership.created_at)}" unless @member.owns?(@team) %>
     </h2>
 
@@ -34,10 +34,10 @@
   </div>
 
   <div id="infoTab" data-tabs-target="tab" class="mb-24 <%= params[:tab].blank? || params[:tab] == 'infoTab' ? '' : 'hidden' %>">
-    <%= render 'member_info', member: @member %>
+    <%= render 'teams/member/member_info', member: @member %>
   </div>
 
   <div id="trendsTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'trendsTab' ? '' : 'hidden' %>">
-    <%= render 'member_graphs', member: @member %>
+    <%= render 'teams/member/trends', member: @member %>
   </div>
 </div>
