--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -5,7 +5,7 @@
 
     <h1 class="heading"><%= @team.name %></h1>
     <h2 class="text-lg text-slate-700 my-1 dark:text-slate-400">
-      Coach: <%= link_to @team.owner.default_name, @team.owner, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
+      Coach: <%= link_to @team.owner.default_name, team_member_path(@team, @team.owner), class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
     </h2>
 
     <% unless @team.description.blank? %>
@@ -13,7 +13,7 @@
     <% end %>
 
     <div class="flex items-center justify-center md:justify-end mt-4">
-      <%= render 'team_buttons', team: @team %>
+      <%= render 'teams/shared/team_buttons', team: @team %>
     </div>
   </div>
 
@@ -54,30 +54,30 @@
   </div>
 
   <div id="infoTab" data-tabs-target="tab" class="mb-24 <%= params[:tab].blank? || params[:tab] == 'infoTab' ? '' : 'hidden' %>">
-    <%= render 'team_stats', team: @team %>
+    <%= render 'teams/show/team_info', team: @team %>
   </div>
 
   <div id="membersTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'membersTab' ? '' : 'hidden' %>">
-    <%= render 'members', members: @members %>
+    <%= render 'teams/show/members', members: @members %>
   </div>
 
   <% if current_user.owns?(@team) %>
     <div id="joinRequestsTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'joinRequestsTab' ? '' : 'hidden' %>">
-      <%= render 'join_requests', join_requests: @join_requests %>
+      <%= render 'teams/show/join_requests', join_requests: @join_requests %>
     </div>
   <% end %>
 
   <% if current_user.member_of?(@team) %>
     <div id="rankingsTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'rankingsTab' ? '' : 'hidden' %>">
-      <%= render 'rankings', team: @team %>
+      <%= render 'teams/show/rankings', team: @team %>
     </div>
 
     <div id="featuredTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'featuredTab' ? '' : 'hidden' %>">
-      <%= render 'featured', team: @team %>
+      <%= render 'teams/show/featured', team: @team %>
     </div>
 
     <div id="recentActivityTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'recentActivityTab' ? '' : 'hidden' %>">
-      <%= render 'recent_activity', team: @team %>
+      <%= render 'teams/show/recent_activity', team: @team %>
     </div>
   <% end %>
 </div>
