--- a/app/views/teams/show.turbo_stream.erb
+++ b/app/views/teams/show.turbo_stream.erb
@@ -1,13 +1,13 @@
 <%= turbo_stream.replace 'teamMembers' do %>
   <%= turbo_frame_tag 'teamMembers' do %>
     <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-      <%= render 'member_list', members: @members %>
+      <%= render 'teams/show/member_list', members: @members %>
     </div>
   <% end %>
 <% end %>
 
 <%= turbo_stream.replace 'teamRankings' do %>
   <%= turbo_frame_tag 'teamRankings', data: { filter_gender_target: 'turboFrame' } do %>
-    <%= render 'rankings_table', team: @team, date_range: @date_range, date_range_description: @date_range_description %>
+    <%= render 'teams/show/rankings_table', team: @team, date_range: @date_range, date_range_description: @date_range_description %>
   <% end %>
 <% end %>
