--- a/app/views/teams/show/_recent_activity.html.erb
+++ b/app/views/teams/show/_recent_activity.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
-  <% recent_runs =  team.recent_runs %>>
+  <% recent_runs =  team.recent_runs %>
   <% if recent_runs.present? %>
     <% recent_runs.each do |run| %>
       <%= render run, team: team %>
