--- a/app/views/users/_teams.html.erb
+++ b/app/views/users/_teams.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 <% if owned_teams.present? %>
-  <%= render 'teams/team_list', teams: owned_teams %>
+  <%= render 'teams/shared/team_list', teams: owned_teams %>
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
     <% if user == current_user %>
@@ -28,7 +28,7 @@
 </div>
 
 <% if membered_teams.present? %>
-  <%= render 'teams/team_list', teams: membered_teams %>
+  <%= render 'teams/shared/team_list', teams: membered_teams %>
 <% else %>
   <div class="flex flex-col gap-6 items-center justify-center py-12">
     <p class="prose dark:prose-invert text-soft">You're not a member of any teams yet.</p>
