--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,35 +1,55 @@
 <% if notice %>
-  <div class="bg-indigo-600 text-white text-center text-sm sm:text-base p-4 fixed top-10 right-10 z-50 max-w-[70vw] sm:max-w-max rounded-lg translate-x-[120%] transition duration-300 ease-in-out" role="alert">
-    <p class='flex items-center space-x-4'>
+  <div class="flex items-center p-4 mb-4 text-sm text-blue-800 border border-blue-300 rounded-lg bg-blue-50 dark:bg-slate-800 dark:text-blue-400 dark:border-blue-800 fixed top-10 right-10 z-50 max-w-[70vw] translate-x-[120%] transition duration-300 ease-in-out" role="alert">
+    <%= inline_svg_tag 'icons/info-circle.svg', class: 'size-5 mr-2 flex-shrink-0' %>
+    <span class="sr-only">Info</span>
+    <p class="flex items-center gap-2">
       <span><%= sanitize notice %></span>
-      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')">&times;</span>
+      <button type="button" class="-my-1.5 -mr-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-blue-400 dark:hover:bg-slate-700" onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')" aria-label="Close">
+        <span class="sr-only">Close</span>
+        <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5' %>
+      </button>
     </p>
   </div>
 <% end %>
 
-<% if flash[:error] %>
-  <div class="bg-rose-600 text-white text-center text-sm sm:text-base p-4 fixed top-10 right-10 z-50 max-w-[70vw] sm:max-w-max rounded-lg translate-x-[120%] transition duration-300 ease-in-out" role="alert">
-    <p class='flex items-center space-x-4'>
-      <span><%= sanitize flash[:error] %></span>
-      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')">&times;</span>
+<% if error %>
+  <div class="flex items-center p-4 mb-4 text-sm text-red-800 border border-red-300 rounded-lg bg-red-50 dark:bg-slate-800 dark:text-red-400 dark:border-red-800 fixed top-10 right-10 z-50 max-w-[70vw] translate-x-[120%] transition duration-300 ease-in-out" role="alert">
+    <%= inline_svg_tag 'icons/x-circle.svg', class: 'size-5 mr-2 flex-shrink-0' %>
+    <span class="sr-only">Info</span>
+    <p class="flex items-center gap-2">
+      <span><%= sanitize error %></span>
+      <button type="button" class="-my-1.5 -mr-1.5 bg-red-50 text-red-500 rounded-lg focus:ring-2 focus:ring-red-400 p-1.5 hover:bg-red-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-red-400 dark:hover:bg-slate-700" onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')" aria-label="Close">
+        <span class="sr-only">Close</span>
+        <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5' %>
+      </button>
     </p>
   </div>
 <% end %>
 
 <% if alert %>
-  <div class="bg-rose-600 text-white text-center text-sm sm:text-base p-4 fixed top-10 right-10 z-50 max-w-[70vw] sm:max-w-max rounded-lg translate-x-[120%] transition duration-300 ease-in-out" role="alert">
-    <p class='flex items-center space-x-4'>
+  <div class="flex items-center p-4 mb-4 text-sm text-yellow-800 border border-yellow-300 rounded-lg bg-yellow-50 dark:bg-slate-800 dark:text-yellow-300 dark:border-yellow-800 fixed top-10 right-10 z-50 max-w-[70vw] translate-x-[120%] transition duration-300 ease-in-out" role="alert">
+    <%= inline_svg_tag 'icons/exclamation-circle.svg', class: 'size-5 mr-2 flex-shrink-0' %>
+    <span class="sr-only">Info</span>
+    <p class="flex items-center gap-2">
       <span><%= sanitize alert %></span>
-      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')">&times;</span>
+      <button type="button" class="-my-1.5 -mr-1.5 bg-yellow-50 text-yellow-500 rounded-lg focus:ring-2 focus:ring-yellow-400 p-1.5 hover:bg-yellow-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-yellow-400 dark:hover:bg-slate-700" onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')" aria-label="Close">
+        <span class="sr-only">Close</span>
+        <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5' %>
+      </button>
     </p>
   </div>
 <% end %>
 
 <% if success %>
-  <div class="bg-green-600 text-white text-center text-sm sm:text-base p-4 fixed top-10 right-10 z-50 max-w-[70vw] sm:max-w-max rounded-lg translate-x-[120%] transition duration-300 ease-in-out" role="alert">
-    <p class='flex items-center space-x-4'>
+  <div class="flex items-center p-4 mb-4 text-sm text-green-800 border border-green-300 rounded-lg bg-green-50 dark:bg-slate-800 dark:text-green-400 dark:border-green-800 fixed top-10 right-10 z-50 max-w-[70vw] translate-x-[120%] transition duration-300 ease-in-out" role="alert">
+    <%= inline_svg_tag 'icons/check-circle.svg', class: 'size-5 mr-2 flex-shrink-0' %>
+    <span class="sr-only">Info</span>
+    <p class="flex items-center gap-2">
       <span><%= sanitize success %></span>
-      <span class='font-bold float-right text-2xl leading-none hover:text-slate-600 dark:hover:text-slate-400 cursor-pointer transition duration-300 ease-in-out' onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')">&times;</span>
+      <button type="button" class="-my-1.5 -mr-1.5 bg-green-50 text-green-500 rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex items-center justify-center size-8 dark:bg-slate-800 dark:text-green-400 dark:hover:bg-slate-700" onclick="this.parentElement.parentElement.classList.add('translate-x-[120%]')" aria-label="Close">
+        <span class="sr-only">Close</span>
+        <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-5' %>
+      </button>
     </p>
   </div>
 <% end %>
@@ -46,6 +66,6 @@
 
     setTimeout(() => {
       message.remove();
-    }, 8000);
+    }, 5500);
   });
 </script>
