--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -1,15 +1,15 @@
-<div class="mt-10 pb-6 border-b dark:border-slate-700 space-y-2">
+<div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
   <h1 class="heading">Account</h1>
   <p class="text-soft">Edit your account details.</p>
 </div>
 
-<div class="my-6">
-  <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Profile</h2>
-  <p class="text-sm text-slate-600 dark:text-slate-400">This information will be visible to other users.</p>
-</div>
-
 <%= form_for resource, as: resource_name, url: registration_path(resource_name), data: { controller: "form-validation" }, html: { method: :put, novalidate: true } do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+  <div class="my-6">
+    <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Profile</h2>
+    <p class="text-sm text-slate-600 dark:text-slate-400">This information will be visible to other users.</p>
+  </div>
 
   <div class='form-group'>
     <%= f.label :username, class: "form-label" %>
