--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -7,7 +7,7 @@
   <% if team.season_dates? %>
     <div class='flex flex-col gap-0.5 items-center justify-center text-center'>
       <p class="text-lg">Season Dates</p>
-      <p class='font-semibold text-2xl'>
+      <p class='font-semibold text-xl'>
         <%= format_date(team.season_start_date) %> to <%= format_date(team.season_end_date) %>
       </p>
       <% if team.season_progress == 0.0 %>
@@ -28,7 +28,7 @@
   <% if team.mileage_goal.present? %>
     <div class='flex flex-col gap-0.5 items-center justify-center text-center'>
       <p class="text-lg">Mileage Goal</p>
-      <p class='font-semibold text-2xl'>
+      <p class='font-semibold text-xl'>
         <%= team.total_miles_in_season %> out of <%= team.mileage_goal %>
       </p>
       <% if team.season_progress == 0.0 %>
