--- a/app/views/teams/forms/_form.html.erb
+++ b/app/views/teams/forms/_form.html.erb
@@ -39,7 +39,7 @@
           <span class="help-text">(optional)</span>
         </p>
       <% end %>
-      <%= image_tag(@team.photo.attached? ? @team.photo.variant(resize_to_limit: [100, 100]).processed : '', data: { image_preview_target: 'output' }, class: "size-24 rounded-md drop-shadow-lg dark:drop-shadow-none #{@team.photo.blank? ? 'hidden' : ''}") %>
+      <%= image_tag(@team.photo.attached? ? @team.photo.variant(resize_to_limit: [100, 100]).processed : '', data: { image_preview_target: 'output' }, class: "size-24 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover #{@team.photo.blank? ? 'hidden' : ''}") %>
 
       <%= form.file_field :photo, accept: 'image/png, image/jpeg', class: 'form-file my-2', data: { image_preview_target: 'input', action: 'image-preview#readURL' } %>
 
