--- a/app/views/teams/show/_join_request.html.erb
+++ b/app/views/teams/show/_join_request.html.erb
@@ -1,6 +1,6 @@
 <div class="flex gap-3 items-center flex-wrap py-3 text-slate-800 dark:text-slate-100">
   <%= link_to request.user, class: 'group flex gap-3 items-center mr-auto' do %>
-    <%= image_tag request.user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none' if request.user.avatar.attached? %>
+    <%= image_tag request.user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' if request.user.avatar.attached? %>
 
     <div>
       <p class="font-semibold group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300"><%= request.user.default_name %></p>
