--- a/app/views/teams/show/_rankings_table.html.erb
+++ b/app/views/teams/show/_rankings_table.html.erb
@@ -1,6 +1,6 @@
 <div class="mt-10 mb-3 space-y-2 flex flex-wrap items-end justify-between">
   <h2 class="subheading">Rankings <%= date_range_description.titlecase %></h2>
-  <%= link_to team_path(team, format: :xlsx), class: 'btn btn-white gap-2' do %>
+  <%= link_to team_path(@team, format: :xlsx, date_range: params[:date_range], start_date: params[:start_date], end_date: params[:end_date]), class: 'btn btn-white gap-2' do %>
     <%= inline_svg_tag 'icons/download.svg', class: 'size-5 shrink-0' %>
     <span>Download as Excel</span>
   <% end %>
