rename 'edit team' tab

--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="tab-container">
     <button type="button" id="editTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'editTab' ? 'btn-tab-active' : '' %>">
       <%= inline_svg_tag 'icons/team.svg', class: 'size-5' %>
-      <span>Team</span>
+      <span>Edit Team</span>
     </button>
 
     <button type="button" id="settingsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'settingsTab' ? 'btn-tab-active' : '' %>">
