--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -4,6 +4,9 @@
     <%= image_tag @member.avatar.variant(resize_to_limit: [150, 150]).processed, class: 'size-28 sm:size-32 md:size-36 rounded-lg drop-shadow-lg dark:drop-shadow-none mx-auto mb-4 object-cover' if @member.avatar.attached? %>
 
     <h1 class="heading"><%= @member.default_name %></h1>
+    <% if @member.display_name.present? %>
+      <h2 class="text-lg my-1 text-soft"><%= @member.username %></h2>
+    <% end %>
     <h2 class="text-lg my-1 text-soft">
       <%= @member.owns?(@team) ? 'Coach' : 'Member' %> of <%= link_to @team.name, @team, class: 'btn-link' %>
       <%= "for #{time_ago_in_words(@team_membership.created_at)}" unless @member.owns?(@team) %>
