--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -171,10 +171,10 @@
     <p class="text-xs text-slate-700 my-1 dark:text-slate-400">Your current password is required to change your password.</p>
   </div>
 
-  <div class="flex items-center gap-4 pt-10 border-t mt-10 border-slate-200 dark:border-slate-700">
+  <div class="flex items-center gap-4 pt-6 bg-white dark:bg-slate-900 border-t border-slate-200 dark:border-slate-700 sticky bottom-0 pb-6">
     <%= f.submit 'Save', data: { turbo: false }, class: 'btn btn-primary' %>
     <%= link_to 'Cancel', :back, data: { turbo: false }, class: 'btn btn-white mr-auto' %>
-    <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo_method: :delete } , class: 'btn btn-destructive'%>
+    <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo_method: :delete } , class: 'btn btn-destructive' %>
   </div>
 <% end %>
 
