--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -37,7 +37,7 @@
   </div>
 
   <div id="infoTab" data-tabs-target="tab" class="mb-24 <%= params[:tab].blank? || params[:tab] == 'infoTab' ? '' : 'hidden' %>">
-    <%= render 'teams/member/member_info', member: @member %>
+    <%= render 'teams/member/member_info', member: @member, team: @team, team_membership: @team_membership %>
   </div>
 
   <div id="trendsTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'trendsTab' ? '' : 'hidden' %>">
